; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_time-utils.c_parse_nsec_time.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_time-utils.c_parse_nsec_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSEC_PER_SEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_nsec_time(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca [10 x i8], align 1
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @strtoul(i8* %11, i8** %8, i32 10)
  store i32 %12, i32* %6, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp ne i32 %15, 46
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load i8*, i8** %8, align 8
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 -1, i32* %3, align 4
  br label %68

23:                                               ; preds = %17, %2
  %24 = load i8*, i8** %8, align 8
  %25 = load i8, i8* %24, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %26, 46
  br i1 %27, label %28, label %60

28:                                               ; preds = %23
  %29 = load i8*, i8** %8, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %8, align 8
  %31 = call i32 @strlen(i8* %30)
  %32 = icmp sgt i32 %31, 9
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  store i32 -1, i32* %3, align 4
  br label %68

34:                                               ; preds = %28
  %35 = getelementptr inbounds [10 x i8], [10 x i8]* %10, i64 0, i64 0
  %36 = load i8*, i8** %8, align 8
  %37 = call i32 @strncpy(i8* %35, i8* %36, i32 9)
  %38 = getelementptr inbounds [10 x i8], [10 x i8]* %10, i64 0, i64 9
  store i8 0, i8* %38, align 1
  %39 = getelementptr inbounds [10 x i8], [10 x i8]* %10, i64 0, i64 0
  %40 = call i32 @strlen(i8* %39)
  store i32 %40, i32* %9, align 4
  br label %41

41:                                               ; preds = %48, %34
  %42 = load i32, i32* %9, align 4
  %43 = icmp slt i32 %42, 9
  br i1 %43, label %44, label %51

44:                                               ; preds = %41
  %45 = load i32, i32* %9, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds [10 x i8], [10 x i8]* %10, i64 0, i64 %46
  store i8 48, i8* %47, align 1
  br label %48

48:                                               ; preds = %44
  %49 = load i32, i32* %9, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %9, align 4
  br label %41

51:                                               ; preds = %41
  %52 = getelementptr inbounds [10 x i8], [10 x i8]* %10, i64 0, i64 0
  %53 = call i32 @strtoul(i8* %52, i8** %8, i32 10)
  store i32 %53, i32* %7, align 4
  %54 = load i8*, i8** %8, align 8
  %55 = load i8, i8* %54, align 1
  %56 = sext i8 %55 to i32
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %59

58:                                               ; preds = %51
  store i32 -1, i32* %3, align 4
  br label %68

59:                                               ; preds = %51
  br label %61

60:                                               ; preds = %23
  store i32 0, i32* %7, align 4
  br label %61

61:                                               ; preds = %60, %59
  %62 = load i32, i32* %6, align 4
  %63 = load i32, i32* @NSEC_PER_SEC, align 4
  %64 = mul nsw i32 %62, %63
  %65 = load i32, i32* %7, align 4
  %66 = add nsw i32 %64, %65
  %67 = load i32*, i32** %5, align 8
  store i32 %66, i32* %67, align 4
  store i32 0, i32* %3, align 4
  br label %68

68:                                               ; preds = %61, %58, %33, %22
  %69 = load i32, i32* %3, align 4
  ret i32 %69
}

declare dso_local i32 @strtoul(i8*, i8**, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
